[tool.poetry]
name = "repl_python3_beta_flask-hello-world-1"
version = "0.1.0"
description = ""
authors = ["IPTADMDGH <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
