[tool.poetry]
name = "repl_python3_flask-hello-world-1"
version = "0.1.0"
description = ""
authors = ["wechmezi <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
